[Feature] Sincronizacion (#84)
* feat: synchronize admin service implementation

* feat: synchronize notification service implementation

* feat: synchronize seat map service implementation

* chore: reformat code

* feat: synchronize seat assignment service implementation

* feat: synchronize variables

* [Chore] Updated run configs

* [Refactor] Reworked syncronization design

Co-authored-by: Julian Arce <juarce@itba.edu.ar>